# part2

./: .gitignore  .gitmodules  CMakeLists.txt
assets/maps/: 15x32_dialogbox.tmx  CoffeeShop.tmx  Home.tmx  forestclearing.tmx  forestmaze.tmx  lake.tmx  mall.tmx  market.tmx  t01.tmx  t02.tmx  t03.tmx  t04.tmx  t05.tmx  t06.tmx  t07.tmx  t08.tmx  t09.tmx  t10.tmx  t11.tmx  t12.tmx  t13.tmx  t14.tmx  t15.tmx  t16.tmx  t17.tmx  t18.tmx  t19.tmx  t20.tmx  t21.tmx  t22.tmx  t23.tmx  t24.tmx  t25.tmx  t26.tmx  t27.tmx  t28.tmx  t29.tmx  t30.tmx  t31.tmx  t32.tmx  (+4 more)
assets/maps/arenas/: beach.tmx  cafe.tmx
assets/scripts/: combat.chai  init.chai  insistcookie.chai  sayhello.chai  ui.chai  world.chai  ycombinator.chai
assets/scripts/combat/: bather.chai  bum.chai  dealer.chai  surfer.chai  vegan.chai
src/: main.cpp
src/core/: components.hpp  ecs.hpp  manager.hpp  system.hpp  tags.hpp
src/core/ecs/: componentstorage.hpp  configuration.hpp  entity.hpp  manager.hpp  signature.hpp  typedefs.hpp  typelist.hpp
src/input/: components.hpp  ecs.hpp  input.hpp  tags.hpp
src/render/: animatedsprite.hpp  animation.hpp  boxframe.hpp  character.cpp  character.hpp  components.hpp  dialoguebox.hpp  drawable.hpp  ecs.hpp  menubox.hpp  render.hpp
src/script/: bindings.cpp  chaiscript.cpp  chaiscript.hpp  components.hpp  dialogue.hpp  ecs.hpp  parser.cpp  parser.hpp  script.cpp  script.hpp  stdlib.cpp  stdlib.hpp  tags.hpp
src/world/: components.hpp  ecs.hpp  location.hpp  map.cpp  map.hpp  maplayer.hpp  movement.hpp  overworld.hpp  position.hpp  tags.hpp
